# 0g-vc-rpc

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
src/rpc/: api.rs  impls.rs  mod.rs
src/types/: error.rs  mod.rs  proof_with_meta.rs  vc_bigint.rs  vc_fr.rs  vc_proof.rs  vc_proving_key.rs
