[package]
name = "zg-vc-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
vc-prove = { path = "../0g-vc" }

ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-bn254 = { version = "=0.4.0" }
ark-std = "0.4"
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
rand = "0.8.5"
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }
serde = "1.0.203"
ark-serialize = "0.4.1"
serde_json = "1.0.117"
base64 = "0.13"
const-hex = "1.12.0"
ark-ec = "0.4.1"
