[package]
name = "zg-vc-rpc"
version = "0.1.0"
edition = "2021"
default-run = "zg-vc-rpc"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"

vc-prove = { path = "../0g-vc" }

num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }
num-traits = { version = "=0.2.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
const-hex = "1.12.0"

ark-groth16 = "0.4"
ark-ff = "0.4.1"
ark-circom = "0.1"
ark-serialize = "0.4"
ark-ec = "0.4.1"
ark-bn254 = "0.4"
ark-std = "0.4"

chrono = "0.4"
hex = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
tiny-keccak = "2.0"
keccak-hash = "0.10.0"

eyre = "0.6"
jsonrpsee = {version = "0.24.2", features = ["full"]}
tokio = "1.39.2"
anyhow = "1.0.86"

